lagt in bilder ock skapat olika quiz som ska finnas

--- a/index/index.html
+++ b/index/index.html
@@ -8,7 +8,28 @@
   </head>
   <body>
     <header>
-      <h1>Är du smart?</h1>
+      <h1>Quiz World</h1>
     </header>
+
+    <div class="text1">
+      <h3>Bread Quiz</h3>
+      <p>You think you are smart? Answer these questions about bread then.</p>
+      <img src="/images/breadquiz.jpg" height="250px" />
+    </div>
+
+    <div class="text2">
+      <h3>Do you know these flowers?</h3>
+      <p>
+        Take this quiz about flowers to decide if you can become a florist or
+        not.
+      </p>
+      <img src="/images/flowerquiz.jpg" height="250px" />
+    </div>
+
+    <div class="text3">
+      <h3>Guess the city!</h3>
+      <p>Did you listen in geography class?</p>
+      <img src="/images/guessthecity.jpg" height="250px" />
+    </div>
   </body>
 </html>
