--- a/index/index.html
+++ b/index/index.html
@@ -15,6 +15,11 @@
       <h3>Bread Quiz</h3>
       <p>You think you are smart? Answer these questions about bread then.</p>
       <img src="/images/breadquiz.jpg" height="250px" />
+      <nav>
+        <button class="button1">
+          <a href="breadquiz.html">Play Now</a>
+        </button>
+      </nav>
     </div>
 
     <div class="text2">
@@ -29,7 +34,26 @@
     <div class="text3">
       <h3>Guess the city!</h3>
       <p>Did you listen in geography class?</p>
+
       <img src="/images/guessthecity.jpg" height="250px" />
+    </div>
+
+    <div class="text4">
+      <h3>Teknikare check</h3>
+      <p>text</p>
+      <img src="/images/teknikarequiz.jpg" height="250px" />
+    </div>
+
+    <div class="text5">
+      <h3>What game is this?</h3>
+      <p>Guess the game!</p>
+      <img src="/images/gamingquiz2.jpg" height="250px" />
+    </div>
+
+    <div class="text6">
+      <h3></h3>
+      <p>Move to your dream city!</p>
+      <img src="" />
     </div>
   </body>
 </html>
