--- a/index/cityquiz.html
+++ b/index/cityquiz.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projekt 3</title>
-    <script defer src="breadquiz.js"></script>
+    <script defer src="cityquiz.js"></script>
   </head>
   <body></body>
 </html>
