mer java script

--- a/index/index.html
+++ b/index/index.html
@@ -51,9 +51,9 @@
     </div>
 
     <div class="text6">
-      <h3></h3>
-      <p>Move to your dream city!</p>
-      <img src="" />
+      <h3>Name all the planets!</h3>
+      <p>Do you want to work at NASA?</p>
+      <img src="/images/galaxyquiz.jpg" height="250px" />
     </div>
   </body>
 </html>
