gjort klart city quiz

--- a/index/cityquiz.html
+++ b/index/cityquiz.html
@@ -10,58 +10,64 @@
   <body>
     <form class="questions">
       <div class="question">
-        <p>Vilket av följande HTML element får finnas inuti ett ul-element?</p>
+        <p>Name this city!</p>
+        <img src="/images/paris.jpg" />
         <label>
-          <input name="question1" type="radio" value="0" checked />p
+          <input name="question1" type="radio" value="0" checked />Moskva
         </label>
-        <label> <input name="question1" type="radio" value="0" />body </label>
-        <label> <input name="question1" type="radio" value="0" />ol </label>
-        <label> <input name="question1" type="radio" value="1" />li </label>
+        <label>
+          <input name="question1" type="radio" value="0" />Stockholm
+        </label>
+        <label>
+          <input name="question1" type="radio" value="0" />Toronto
+        </label>
+        <label> <input name="question1" type="radio" value="1" />Paris </label>
       </div>
       <div class="question">
-        <p>Vad står HTTP för?</p>
+        <p>Name this city!</p>
+        <img src="/images/madrid.jpg" />
         <label>
-          <input name="question2" type="radio" value="0" checked />HyperText
-          Transform Program
+          <input name="question2" type="radio" value="0" checked />London
         </label>
-        <label>
-          <input name="question2" type="radio" value="0" />Head Target Transfer
-          Protocol
-        </label>
-        <label>
-          <input name="question2" type="radio" value="1" />HyperText Transfer
-          Protocol
-        </label>
-        <label>
-          <input name="question2" type="radio" value="0" />Heading Towards Troll
-          Paradise
-        </label>
+        <label> <input name="question2" type="radio" value="1" />Madrid </label>
+        <label> <input name="question2" type="radio" value="0" />Rome </label>
+        <label> <input name="question2" type="radio" value="0" />Bern </label>
       </div>
       <div class="question">
-        <p>Vem uppfann HTML, HTTP och den första webbläsaren?</p>
+        <p>Name this city!</p>
+        <img src="/images/london.jpg" />
         <label>
-          <input name="question3" type="radio" value="1" checked />Tim Berners
-          Lee
+          <input name="question3" type="radio" value="0" checked />Oslo
         </label>
-        <label>
-          <input name="question3" type="radio" value="0" />Nicholas Cage
-        </label>
-        <label>
-          <input name="question3" type="radio" value="0" />Hugh Jackman
-        </label>
-        <label>
-          <input name="question3" type="radio" value="0" />Channing Tatum
-        </label>
+        <label> <input name="question3" type="radio" value="0" />Lisbon </label>
+        <label> <input name="question3" type="radio" value="0" />Rio </label>
+        <label> <input name="question3" type="radio" value="1" />London </label>
       </div>
       <div class="question">
-        <p>Vad heter kapten Jonathan Archers hund?</p>
+        <p>Name this city!</p>
+        <img src="/images/tokyo.jpg" />
         <label>
-          <input name="question4" type="radio" value="0" checked />Spot
+          <input name="question4" type="radio" value="0" checked />Wien
         </label>
-        <label> <input name="question4" type="radio" value="0" />Jonesy </label>
-        <label> <input name="question4" type="radio" value="0" />Laika </label>
         <label>
-          <input name="question4" type="radio" value="1" />Porthos
+          <input name="question4" type="radio" value="0" />Budapest
+        </label>
+        <label> <input name="question4" type="radio" value="0" />Seoul </label>
+        <label> <input name="question4" type="radio" value="1" />Tokyo </label>
+      </div>
+      <div class="question">
+        <p>Name this city!</p>
+        <img src="/images/rome.jpg" />
+
+        <label>
+          <input name="question5" type="radio" value="1" checked />Rome
+        </label>
+        <label>
+          <input name="question5" type="radio" value="0" />Amsterdam
+        </label>
+        <label> <input name="question5" type="radio" value="0" />Berlin </label>
+        <label>
+          <input name="question5" type="radio" value="0" />Bratislava
         </label>
       </div>
       <button type="button" onclick="submitQuiz()">Rätta!</button>
