--- a/index/index.html
+++ b/index/index.html
@@ -36,6 +36,11 @@
       <p>Did you listen in geography class?</p>
 
       <img src="/images/guessthecity.jpg" height="250px" />
+      <nav>
+        <button class="button1">
+          <a href="cityquiz.html">Play Now</a>
+        </button>
+      </nav>
     </div>
 
     <div class="text4">
