gjort klart flower quiz

--- a/index/flowerquiz.html
+++ b/index/flowerquiz.html
@@ -10,59 +10,52 @@
   <body>
     <form class="questions">
       <div class="question">
-        <p>Vilket av följande HTML element får finnas inuti ett ul-element?</p>
+        <p>What is this flower called?</p>
+        <img src="/images/tulip.jpg" />
         <label>
-          <input name="question1" type="radio" value="0" checked />p
+          <input name="question1" type="radio" value="0" checked />Rose
         </label>
-        <label> <input name="question1" type="radio" value="0" />body </label>
-        <label> <input name="question1" type="radio" value="0" />ol </label>
-        <label> <input name="question1" type="radio" value="1" />li </label>
+        <label> <input name="question1" type="radio" value="0" />Daisy </label>
+        <label> <input name="question1" type="radio" value="0" />Orchid </label>
+        <label> <input name="question1" type="radio" value="1" />Tulip </label>
       </div>
       <div class="question">
-        <p>Vad står HTTP för?</p>
+        <p>What is this flower called?</p>
+        <img src="/images/poppy.jpg" />
         <label>
-          <input name="question2" type="radio" value="0" checked />HyperText
-          Transform Program
+          <input name="question2" type="radio" value="1" checked />Poppy
         </label>
         <label>
-          <input name="question2" type="radio" value="0" />Head Target Transfer
-          Protocol
+          <input name="question2" type="radio" value="0" />Buttercup
         </label>
         <label>
-          <input name="question2" type="radio" value="1" />HyperText Transfer
-          Protocol
+          <input name="question2" type="radio" value="0" />Bluebell
         </label>
         <label>
-          <input name="question2" type="radio" value="0" />Heading Towards Troll
-          Paradise
-        </label>
-      </div>
-      <div class="question">
-        <p>Vem uppfann HTML, HTTP och den första webbläsaren?</p>
-        <label>
-          <input name="question3" type="radio" value="1" checked />Tim Berners
-          Lee
-        </label>
-        <label>
-          <input name="question3" type="radio" value="0" />Nicholas Cage
-        </label>
-        <label>
-          <input name="question3" type="radio" value="0" />Hugh Jackman
-        </label>
-        <label>
-          <input name="question3" type="radio" value="0" />Channing Tatum
+          <input name="question2" type="radio" value="0" />Anemone
         </label>
       </div>
       <div class="question">
-        <p>Vad heter kapten Jonathan Archers hund?</p>
+        <p>What is this flower called?</p>
+        <img src="/images/sunflower.jpg" />
         <label>
-          <input name="question4" type="radio" value="0" checked />Spot
+          <input name="question3" type="radio" value="1" checked />Sunflower
         </label>
-        <label> <input name="question4" type="radio" value="0" />Jonesy </label>
-        <label> <input name="question4" type="radio" value="0" />Laika </label>
+        <label> <input name="question3" type="radio" value="0" />Mimosa </label>
+        <label> <input name="question3" type="radio" value="0" />Pansy </label>
         <label>
-          <input name="question4" type="radio" value="1" />Porthos
+          <input name="question3" type="radio" value="0" />Camellia
         </label>
+      </div>
+      <div class="question">
+        <p>What is this flower called?</p>
+        <img src="/images/daisy.jpg" />
+        <label>
+          <input name="question4" type="radio" value="0" checked />Lily
+        </label>
+        <label> <input name="question4" type="radio" value="0" />Amelia </label>
+        <label> <input name="question4" type="radio" value="1" />Daisy </label>
+        <label> <input name="question4" type="radio" value="0" />Sofia </label>
       </div>
       <button type="button" onclick="submitQuiz()">Rätta!</button>
     </form>
