gjort klart galaxy quiz

--- a/index/galaxyquiz.html
+++ b/index/galaxyquiz.html
@@ -10,59 +10,144 @@
   <body>
     <form class="questions">
       <div class="question">
-        <p>Vilket av följande HTML element får finnas inuti ett ul-element?</p>
+        <p>What is this planet called?</p>
+        <img src="/images/mars.jpg" />
         <label>
-          <input name="question1" type="radio" value="0" checked />p
+          <input name="question1" type="radio" value="1" checked />Mars
         </label>
-        <label> <input name="question1" type="radio" value="0" />body </label>
-        <label> <input name="question1" type="radio" value="0" />ol </label>
-        <label> <input name="question1" type="radio" value="1" />li </label>
+        <label>
+          <input name="question1" type="radio" value="0" />Jupiter
+        </label>
+        <label> <input name="question1" type="radio" value="0" />Uranus </label>
+        <label> <input name="question1" type="radio" value="1" />Saturn </label>
       </div>
       <div class="question">
-        <p>Vad står HTTP för?</p>
+        <p>What is this planet called?</p>
+        <img src="/images/mercury.jpg" />
         <label>
-          <input name="question2" type="radio" value="0" checked />HyperText
-          Transform Program
+          <input name="question2" type="radio" value="0" checked />Neptune
+        </label>
+        <label> <input name="question2" type="radio" value="0" />Earth </label>
+        <label>
+          <input name="question2" type="radio" value="1" />Mercury
+        </label>
+        <label> <input name="question2" type="radio" value="0" />Pluto </label>
+      </div>
+      <div class="question">
+        <p>What is this planet called?</p>
+        <img src="/images/pluto.jpg" />
+        <label>
+          <input name="question3" type="radio" value="1" checked />Pluto
         </label>
         <label>
-          <input name="question2" type="radio" value="0" />Head Target Transfer
-          Protocol
+          <input name="question3" type="radio" value="0" />The Moon
+        </label>
+        <label> <input name="question3" type="radio" value="0" />Saturn </label>
+        <label> <input name="question3" type="radio" value="0" />Venus </label>
+      </div>
+      <div class="question">
+        <p>What is this planet called?</p>
+        <img src="/images/neptune.jpg" />
+        <label>
+          <input name="question4" type="radio" value="0" checked />Saturn
         </label>
         <label>
-          <input name="question2" type="radio" value="1" />HyperText Transfer
-          Protocol
+          <input name="question4" type="radio" value="0" />The Sun
         </label>
         <label>
-          <input name="question2" type="radio" value="0" />Heading Towards Troll
-          Paradise
+          <input name="question4" type="radio" value="1" />Neptune
+        </label>
+        <label> <input name="question4" type="radio" value="0" />Mars </label>
+      </div>
+      <div class="question">
+        <p>What is this planet called?</p>
+        <img src="/images/thesun.jpg" />
+        <label>
+          <input name="question5" type="radio" value="0" checked />Neptune
+        </label>
+        <label> <input name="question5" type="radio" value="0" />Pluto </label>
+        <label> <input name="question5" type="radio" value="0" />Venus </label>
+        <label>
+          <input name="question5" type="radio" value="1" />The Sun
         </label>
       </div>
       <div class="question">
-        <p>Vem uppfann HTML, HTTP och den första webbläsaren?</p>
+        <p>What is this planet called?</p>
+        <img src="/images/themoon.jpg" />
         <label>
-          <input name="question3" type="radio" value="1" checked />Tim Berners
-          Lee
+          <input name="question6" type="radio" value="0" checked />Jupiter
+        </label>
+        <label> <input name="question6" type="radio" value="0" />Venus </label>
+        <label>
+          <input name="question6" type="radio" value="0" />Mercury
         </label>
         <label>
-          <input name="question3" type="radio" value="0" />Nicholas Cage
-        </label>
-        <label>
-          <input name="question3" type="radio" value="0" />Hugh Jackman
-        </label>
-        <label>
-          <input name="question3" type="radio" value="0" />Channing Tatum
+          <input name="question6" type="radio" value="1" />The Moon
         </label>
       </div>
       <div class="question">
-        <p>Vad heter kapten Jonathan Archers hund?</p>
+        <p>What is this planet called?</p>
+        <img src="/images/earth.jpg" />
         <label>
-          <input name="question4" type="radio" value="0" checked />Spot
+          <input name="question7" type="radio" value="0" checked />The Moon
         </label>
-        <label> <input name="question4" type="radio" value="0" />Jonesy </label>
-        <label> <input name="question4" type="radio" value="0" />Laika </label>
+        <label> <input name="question7" type="radio" value="1" />Earth </label>
+        <label> <input name="question7" type="radio" value="0" />Saturn </label>
+        <label> <input name="question7" type="radio" value="0" />Uranus </label>
+      </div>
+      <div class="question">
+        <p>What is this planet called?</p>
+        <img src="/images/venus.jpg" />
         <label>
-          <input name="question4" type="radio" value="1" />Porthos
+          <input name="question8" type="radio" value="1" checked />Venus
         </label>
+        <label> <input name="question8" type="radio" value="0" />Mars </label>
+        <label>
+          <input name="question8" type="radio" value="0" />Mercury
+        </label>
+        <label> <input name="question8" type="radio" value="0" />Saturn </label>
+      </div>
+      <div class="question">
+        <p>What is this planet called?</p>
+        <img src="/images/jupiter.jpg" />
+        <label>
+          <input name="question9" type="radio" value="0" checked />Saturn
+        </label>
+        <label> <input name="question9" type="radio" value="0" />Earth </label>
+        <label>
+          <input name="question9" type="radio" value="0" />Neptune
+        </label>
+        <label>
+          <input name="question9" type="radio" value="1" />Jupiter
+        </label>
+      </div>
+      <div class="question">
+        <p>What is this planet called?</p>
+        <img src="/images/saturn.jpg" />
+        <label>
+          <input name="question10" type="radio" value="0" checked />Uranus
+        </label>
+        <label>
+          <input name="question10" type="radio" value="0" />The Sun
+        </label>
+        <label>
+          <input name="question10" type="radio" value="1" />Saturn
+        </label>
+        <label> <input name="question10" type="radio" value="0" />Mars </label>
+      </div>
+      <div class="question">
+        <p>What is this planet called?</p>
+        <img src="/images/uranus.jpg" />
+        <label>
+          <input name="question11" type="radio" value="0" checked />Saturn
+        </label>
+        <label>
+          <input name="question11" type="radio" value="1" />Uranus
+        </label>
+        <label>
+          <input name="question11" type="radio" value="0" />Mercury
+        </label>
+        <label> <input name="question11" type="radio" value="0" />Venus </label>
       </div>
       <button type="button" onclick="submitQuiz()">Rätta!</button>
     </form>
