gjort klart game quiz

--- a/index/gamequiz.html
+++ b/index/gamequiz.html
@@ -10,59 +10,58 @@
   <body>
     <form class="questions">
       <div class="question">
-        <p>Vilket av följande HTML element får finnas inuti ett ul-element?</p>
+        <p>What is this character called?</p>
+        <img src="/images/tracer.jpg" />
         <label>
-          <input name="question1" type="radio" value="0" checked />p
+          <input name="question1" type="radio" value="0" checked />D.VA
         </label>
-        <label> <input name="question1" type="radio" value="0" />body </label>
-        <label> <input name="question1" type="radio" value="0" />ol </label>
-        <label> <input name="question1" type="radio" value="1" />li </label>
-      </div>
-      <div class="question">
-        <p>Vad står HTTP för?</p>
+        <label> <input name="question1" type="radio" value="0" />Mercy </label>
+        <label> <input name="question1" type="radio" value="1" />Tracer </label>
         <label>
-          <input name="question2" type="radio" value="0" checked />HyperText
-          Transform Program
-        </label>
-        <label>
-          <input name="question2" type="radio" value="0" />Head Target Transfer
-          Protocol
-        </label>
-        <label>
-          <input name="question2" type="radio" value="1" />HyperText Transfer
-          Protocol
-        </label>
-        <label>
-          <input name="question2" type="radio" value="0" />Heading Towards Troll
-          Paradise
+          <input name="question1" type="radio" value="0" />Widowmaker
         </label>
       </div>
       <div class="question">
-        <p>Vem uppfann HTML, HTTP och den första webbläsaren?</p>
+        <p>What is the highest-selling gaming console to date?</p>
         <label>
-          <input name="question3" type="radio" value="1" checked />Tim Berners
-          Lee
+          <input name="question2" type="radio" value="0" checked />Nintendo DC
         </label>
         <label>
-          <input name="question3" type="radio" value="0" />Nicholas Cage
+          <input name="question2" type="radio" value="1" />Playstation 2
         </label>
         <label>
-          <input name="question3" type="radio" value="0" />Hugh Jackman
+          <input name="question2" type="radio" value="0" />XBOX 360
+        </label>
+        <label> <input name="question2" type="radio" value="0" />WII </label>
+      </div>
+      <div class="question">
+        <p>Mario first appeared in what video game?</p>
+        <img src="/images/mario.jpg" />
+        <label>
+          <input name="question3" type="radio" value="1" checked />Donkey Kong
         </label>
         <label>
-          <input name="question3" type="radio" value="0" />Channing Tatum
+          <input name="question3" type="radio" value="0" />Mario Galaxy
+        </label>
+        <label>
+          <input name="question3" type="radio" value="0" />Super Mario Odyssey
+        </label>
+        <label>
+          <input name="question3" type="radio" value="0" />Super Mario Run
         </label>
       </div>
       <div class="question">
-        <p>Vad heter kapten Jonathan Archers hund?</p>
+        <p>What is the name of the video game designed to treat depression?</p>
         <label>
-          <input name="question4" type="radio" value="0" checked />Spot
+          <input name="question4" type="radio" value="0" checked />MINDNIGHT
         </label>
-        <label> <input name="question4" type="radio" value="0" />Jonesy </label>
-        <label> <input name="question4" type="radio" value="0" />Laika </label>
         <label>
-          <input name="question4" type="radio" value="1" />Porthos
+          <input name="question4" type="radio" value="0" />Human Fall Flat
         </label>
+        <label>
+          <input name="question4" type="radio" value="0" />Among the Sleep
+        </label>
+        <label> <input name="question4" type="radio" value="1" />SPARX </label>
       </div>
       <button type="button" onclick="submitQuiz()">Rätta!</button>
     </form>
