gjort klart teknikare quiz

--- a/index/teknikarequiz.html
+++ b/index/teknikarequiz.html
@@ -10,58 +10,60 @@
   <body>
     <form class="questions">
       <div class="question">
-        <p>Vilket av följande HTML element får finnas inuti ett ul-element?</p>
+        <p>Which of the following is not a web browser?</p>
         <label>
-          <input name="question1" type="radio" value="0" checked />p
-        </label>
-        <label> <input name="question1" type="radio" value="0" />body </label>
-        <label> <input name="question1" type="radio" value="0" />ol </label>
-        <label> <input name="question1" type="radio" value="1" />li </label>
-      </div>
-      <div class="question">
-        <p>Vad står HTTP för?</p>
-        <label>
-          <input name="question2" type="radio" value="0" checked />HyperText
-          Transform Program
+          <input name="question1" type="radio" value="0" checked />MOSAIC
         </label>
         <label>
-          <input name="question2" type="radio" value="0" />Head Target Transfer
-          Protocol
+          <input name="question1" type="radio" value="1" />FACEBOOK
         </label>
+        <label> <input name="question1" type="radio" value="0" />WWW </label>
         <label>
-          <input name="question2" type="radio" value="1" />HyperText Transfer
-          Protocol
-        </label>
-        <label>
-          <input name="question2" type="radio" value="0" />Heading Towards Troll
-          Paradise
+          <input name="question1" type="radio" value="0" />Netscape Navigator
         </label>
       </div>
       <div class="question">
-        <p>Vem uppfann HTML, HTTP och den första webbläsaren?</p>
+        <p>Which of the following is not an input device?</p>
         <label>
-          <input name="question3" type="radio" value="1" checked />Tim Berners
-          Lee
+          <input name="question2" type="radio" value="0" checked />Keyboard
+        </label>
+        <label> <input name="question2" type="radio" value="1" />VDU </label>
+        <label>
+          <input name="question2" type="radio" value="0" />Light Pen
+        </label>
+        <label> <input name="question2" type="radio" value="0" />Mouse </label>
+      </div>
+      <div class="question">
+        <p>Which of the following is not an example of an Operating System?</p>
+        <label>
+          <input name="question3" type="radio" value="0" checked />Windows 98
         </label>
         <label>
-          <input name="question3" type="radio" value="0" />Nicholas Cage
+          <input name="question3" type="radio" value="0" />BSD Unix
         </label>
         <label>
-          <input name="question3" type="radio" value="0" />Hugh Jackman
+          <input name="question3" type="radio" value="1" />Microsoft Office XP
         </label>
         <label>
-          <input name="question3" type="radio" value="0" />Channing Tatum
+          <input name="question3" type="radio" value="0" />Red Hat Linux
         </label>
       </div>
       <div class="question">
-        <p>Vad heter kapten Jonathan Archers hund?</p>
+        <p>
+          Which is the part of the computer system that one can physically
+          touch?
+        </p>
         <label>
-          <input name="question4" type="radio" value="0" checked />Spot
+          <input name="question4" type="radio" value="0" checked />Data
         </label>
-        <label> <input name="question4" type="radio" value="0" />Jonesy </label>
-        <label> <input name="question4" type="radio" value="0" />Laika </label>
         <label>
-          <input name="question4" type="radio" value="1" />Porthos
+          <input name="question4" type="radio" value="0" />Software
+        </label>
+        <label>
+          <input name="question4" type="radio" value="0" />Operating Systems
+        </label>
+        <label>
+          <input name="question4" type="radio" value="1" />Hardware
         </label>
       </div>
       <button type="button" onclick="submitQuiz()">Rätta!</button>
